opam-version: "1.2"
name: "harmatia"
version: "0.1"
author: "octachron <octa@polychoron.fr>"
maintainer: "octachron <octa@polychoron.fr>"
homepage: "https://github.com/Octachron/harmatia"
bug-reports: "https://github.com/Octachron/harmatia/issues"
license: "lgpl-2+ocaml linking exception"
dev-repo: "https://github.com/Octachron/harmatia.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: []
available: [ ocaml-version = "4.07.0"]
